# Lark

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Drosim.sln  README.md  basic_usage.csv
DroneSim/: CMakeLists.txt  DroneSim.cpp  DroneSim.vcxproj  DroneSim.vcxproj.filters
DroneSim/Common/: CommonHeaders.h  Id.h  PrimitiveTypes.h
DroneSim/Components/: ComponentCommon.h  Entity.cpp  Entity.h  GeoComp.cpp  GeoComp.h  Geometry.cpp  Geometry.h  Model.h  ModelParser.cpp  ModelParser.h  PythonScript.h  Script.cpp  Script.h  Transform.cpp  Transform.h
DroneSim/Core/: GameLoop.cpp  GameLoop.h
DroneSim/DroneExtension/: DroneCommonHeaders.h  DroneCreation.cpp  DroneCreation.h  DroneData.h  DroneEntity.h  DroneManager.cpp  DroneManager.h
DroneSim/DroneExtension/Components/: BaseComponent.h  Battery.cpp  Battery.h  BatteryComponent.h  Component.h  Fuselage.cpp  Fuselage.h  FuselageComponent.h  Rotor.cpp  Rotor.h  RotorComponent.h
DroneSim/DroneSimAPI/: GameEntity.h  GeometryAPI.h  GeometryComponent.h  ScriptComponent.h  TransformComponent.h
DroneSim/Geometry/: Geometry.cpp  Geometry.h  GeometryImporter.cpp  GeometryImporter.h  MeshPrimitives.cpp  MeshPrimitives.h
DroneSim/Physics/: AeroDynamics.cpp  AeroDynamics.h  ControlSystem.cpp  ControlSystem.h  Controller.cpp  Controller.h  ControllerTypes.h  CpuPhysicsBackend.h  DroneCreation.cpp  DroneCreation.h  DroneData.h  DroneSystemData.h  DroneTypes.h  DroneUpdate.cpp  DroneUpdate.h  Environment.h  GpuPhysicsBackend.cpp  GpuPhysicsBackend.h  IPhysicsSystem.h  Multirotor.cpp  Multirotor.h  PhysicsBackend.h  PhysicsStructures.h  PhysicsSystem.cpp  PhysicsSystemManager.h  Safety.cpp  Safety.h  SensorSimulation.cpp  SensorSimulation.h  ShaderManager.h  World.cpp  World.h
DroneSim/Physics/CPU/: AABB.h  AABBTree.cpp  AABBTree.h  Broadphase.h  Collider.cpp  Collider.h  PhysicsStructures.h  PhysicsWorld.cpp  PhysicsWorld.h  RayCast.h  RigidBody.cpp  RigidBody.h  Shape.h
DroneSim/Physics/CPU-Compute/: BodySystem.cpp  BodySystem.h  ColliderSystem.cpp  ColliderSystem.h  ConstraintSystem.cpp  ConstraintSystem.h  NarrowPhase.cpp  NarrowPhase.h  PhysicsData.h  PhysicsSystem.cpp  PhysicsSystem.h
DroneSim/Physics/PhysicSystems/: RigidBodySystem.h  SoftBodySystem.h
DroneSim/Physics/Shaders/: BuildLBVH.comp  CollisionDetection.comp  ComputeMortonCodes.comp  PhysicsUpdate.comp  RadixSort.comp  RefitBVH.comp  rigidbody_comp.glsl
DroneSim/Physics/detail/: BVHCPU.h  BoundingVolumeHierarchyCPU.h  CollisionCPU.cpp  CollisionCPU.h
DroneSim/Scripting/: PythonBindings.cpp  PythonBindings.h  ScriptContext.h
DroneSim/Utils/: ErrorHandling.h  Logger.h  MathTypes.h  Util.h
EngineDLL/: CMakeLists.txt  Common.h  EngineAPI.cpp  EngineAPI.h  EngineDLL.vcxproj  EntityAPI.cpp  Structures.h  dllmain.cpp
EngineDLL/APIs/: EngineCoreAPI.h  EngineUtilities.cpp  EngineUtilities.h  EntityAPI.cpp  EntityAPI.h  GameLoopAPI.cpp  GameLoopAPI.h  GeometryAPI.cpp  GeometryAPI.h  MaterialAPI.cpp  MaterialAPI.h  PhysicsAPI.cpp  PhysicsAPI.h  ScriptAPI.cpp  ScriptAPI.h  TransformAPI.cpp  TransformAPI.h
EngineDLL/Structures/: GeometryStructures.h  PhysicsStructures.h  Structures.h
LarkEditor/: CMakeLists.txt
LarkEditor/ProjectTemplates/EmptyProject/: project.lark  template.xml
LarkEditor/src/: Main.cpp
LarkEditor/src/Commands/: ICommand.h
LarkEditor/src/Components/: Component.h  Drone.h  Geometry.h  Material.h  Physics.h  Script.h  Transform.h
LarkEditor/src/Editor/: EditorApplication.cpp  EditorApplication.h
LarkEditor/src/Geometry/: Asset.h  Geometry.h  GeometryRenderer.cpp  GeometryRenderer.h
LarkEditor/src/Models/: GeometryModel.h
LarkEditor/src/Project/: GameEntity.h  Project.cpp  Project.h  ProjectData.h  ProjectTemplate.cpp  ProjectTemplate.h  Scene.h
LarkEditor/src/Rendering/: GeometryRenderManager.h  GeometryRenderer.cpp  GeometryRenderer.h
LarkEditor/src/Services/: EventBus.h  GeometryService.h  PhysicService.h  ProjectSettings.h  SelectionService.h  TransformService.h
LarkEditor/src/Style/: CustomWidgets.cpp  CustomWidgets.h  CustomWindow.cpp  CustomWindow.h  Theme.cpp  Theme.h
LarkEditor/src/Utils/: GuizmoHeader.h  MathUtils.h  Utils.cpp  Utils.h
LarkEditor/src/View/: ComponentView.cpp  ComponentView.h  FileDialog.h  GeometryViewerView.cpp  GeometryViewerView.h  LoggerView.cpp  LoggerView.h  PhysicsSettingsView.cpp  PhysicsSettingsView.h  PrimitiveMeshSelectionView.cpp  PrimitiveMeshSelectionView.h  ProjectBrowserView.cpp  ProjectBrowserView.h  ProjectSettingsView.cpp  ProjectSettingsView.h  SceneView.cpp  SceneView.h  Style.cpp  Style.h  TitleBarView.cpp  TitleBarView.h
LarkEditor/src/ViewModels/: ComponentViewModel.h  DroneViewModel.h  GeometryViewModel.h  ObservableProperty.h  PhysicsViewModel.h  ProjectBrowserViewModel.h  ProjectSettingsViewModel.h  SceneViewModel.h  TitleBarViewModel.h
LarkEditor/src/core/: Loop.h
NativeEditor/: CMakeLists.txt
NativeEditor/ProjectTemplates/EmptyProject/: MSVCProject  MSVCSolution
NativeEditor/Source/: Main.cpp
NativeEditor/src/: Main.cpp
NativeEditor/src/Components/: Component.h  Geometry.h  LoggerView.cpp  ProjectBrowserView.cpp  ProjectBrowserView.h  SceneView.cpp  Script.h  Transform.h
NativeEditor/src/Editor/: EditorApplication.cpp  EditorApplication.h
NativeEditor/src/Geometry/: Asset.h  Geometry.h  GeometryRenderer.cpp  GeometryRenderer.h
NativeEditor/src/Project/: GameEntity.h  Project.cpp  Project.h  ProjectData.h  ProjectTemplate.cpp  ProjectTemplate.h  Scene.cpp  Scene.h
NativeEditor/src/Utils/: ImGuizmoManager.h  Logger.cpp  MathUtils.h  NumberBox.cpp  NumberBox.h  Utils.cpp  Utils.h  VectorBox.cpp  (+1 more)
Tests/: CMakeLists.txt  Main.cpp
Tests/ECSTests/: EntityTests.h
Tests/PhysicsTests/: BladeFlappingTest.h  CSVParser.h  ControlTest.h  ControllerTest.h  DroneDynamicsTest.h  DronePhysicsRenderer.h  ExtendedRotorTests.h  IntegrationTest.h  IsaModelTest.h  MathTest.h  MultirotorTest.h  PhysicsTests.h  RotorPhysicsTest.h  RotorPysicsTest.cpp  RotorVisualizationTest.h  TransformationTest.h  VisualTest.h
Tests/UtilTests/: LoggingTest.h
(+222 files in other folders)
